# platform-ops-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
fixtures/scenarios/: ansible-airgap-wait-loop.json  ansible-dependency-gate-waiting.json  ansible-provisioning-artifact-failure.json  ansible-pxe-stale-dhcp-reservations.json  ansible-redfish-post-busy.json  ansible-tftp-wedged-session.json  crashloop-api.json  custom-resource-with-crossplane-owner.json  edgeops-airgap-blade-wait-loop.json  edgeops-pxe-nexus-failure.json  failed-scheduling.json  image-pull-backoff.json  missing-secret.json
manifests/: job.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
src/platform_ops_agent/: __init__.py  analyzer.py  cli.py  live_cluster.py
src/platform_ops_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_live_cluster.py
vars/: fixture-values.example.json
