[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-ops-agent"
version = "0.1.0"
description = "CLI-first MVP for AI-assisted platform operations workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Brian Friend" }
]
dependencies = [
  "kubernetes>=30.1.0",
]

[project.scripts]
platform-ops-agent = "platform_ops_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
